# Hackathon-0-Personal-AI-Employee

./: .gitignore  BRONZE_TIER_VERIFICATION.md  COMPLETE_GUIDE.md  DEMO.md  FINAL_SUMMARY.md  HOW_TO_RUN_GUIDE.md  MCP_SETUP_GUIDE.md  QUICK_START.md  README.md  SILVER_TIER_COMPLETE.md  SILVER_TIER_IMPLEMENTATION_COMPLETE.md  SILVER_TIER_QUICK_REFERENCE.md  SILVER_TIER_QUICK_START.md  SILVER_TIER_README.md  START_HERE.md  setup_silver_tier.bat  setup_silver_tier.sh  skills-lock.json  start_watcher.bat  start_watcher.sh  test_gmail.bat  test_gmail.sh  test_linkedin.bat  test_system.bat  test_system.sh  verify_silver_tier.bat  verify_silver_tier.sh
.claude/: settings.local.json
.claude/skills/ai-employee/: SKILL.md  prompt.md
.claude/skills/gmail-monitor/: SKILL.md  prompt.md
.claude/skills/linkedin-automation/: SKILL.md  prompt.md
.claude/skills/schedule-task/: SKILL.md  prompt.md
.claude/skills/send-email/: SKILL.md  prompt.md
.claude/skills/whatsapp-monitor/: SKILL.md  prompt.md
AI_Employee_Vault/: Company_Handbook.md  Dashboard.md  README.md
AI_Employee_Vault/Config/: calendar_settings.json  email_settings.json  gmail_rules.json  linkedin_settings.json  whatsapp_rules.json
AI_Employee_Vault/Plans/: PLAN_invoice_client_abc.md
AI_Employee_Vault/watchers/: base_watcher.py  filesystem_watcher.py  gmail_watcher.py  linkedin_post_direct.py  linkedin_watcher.py  main.py  post_to_linkedin.py  pyproject.toml  requirements.txt  test_gmail_watcher.py  test_linkedin_watcher.py  test_silver_tier.py  whatsapp_watcher.py
