[project]
name = "watchers"
version = "0.2.0"
description = "AI Employee Watchers - Bronze & Silver Tier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "watchdog>=6.0.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
    "playwright>=1.40.0",
]
